# OpenSimplex2

./: CMakeLists.txt  Cargo.toml  README.md
examples/: seed_2d.rs
rust/: OpenSimplex2.h  fast.rs  lib.rs  smooth.rs
