cmake_minimum_required(VERSION 3.19)

set(CURRENT_PROJECT "OpenSimplex2Interface")

option(OPENSIMPLEX_C "Enable build old C implementation instead Rust" OFF)
option(OPENSIMPLEX_RUST "Enable build old C implementation instead Rust" ON)


add_library(${CURRENT_PROJECT} INTERFACE)

if (OPENSIMPLEX_RUST)

    include(FetchContent)

    FetchContent_Declare(
        Corrosion
        GIT_REPOSITORY https://github.com/corrosion-rs/corrosion.git
        GIT_TAG v0.5
    )
    FetchContent_MakeAvailable(Corrosion)
    corrosion_import_crate(MANIFEST_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Cargo.toml ALL_FEATURES)

    target_link_libraries(${CURRENT_PROJECT} INTERFACE "opensimplex2")
    target_include_directories(${CURRENT_PROJECT} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

endif()

if (OPENSIMPLEX_C)

    set(SOURCE_CPP
        "${CMAKE_CURRENT_SOURCE_DIR}/_old/c/OpenSimplex2F.c"
        "${CMAKE_CURRENT_SOURCE_DIR}/_old/c/OpenSimplex2F.h"
    )

    add_library(${CURRENT_PROJECT}C ${SOURCE_CPP})
    target_include_directories(${CURRENT_PROJECT}C PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/_old/")
    target_compile_options(${CURRENT_PROJECT}C PRIVATE -Wall -Wextra --pedantic)
    target_link_libraries(${CURRENT_PROJECT} INTERFACE ${CURRENT_PROJECT}C)

endif()
