[package]
name = "opensimplex2"
version = "1.1.0"
edition = "2021"
rust-version = "1.70.0"

description = "Port of OpenSimplex2"
authors = ["KdotJPG"]
license = "CC0-1.0"
repository = "https://github.com/KdotJPG/OpenSimplex2"
categories = ["algorithms", "graphics", "game-development"]
keywords = ["OpenSimplex", "Simplex", "noise", "random", "Perlin"]

# omit java, etc. from .crate file
include = [
	"Cargo.toml",
	"rust/*.rs",
]

[lib]
path = "rust/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[features]
default = []
std = []

[lints]
clippy.excessive_precision = "allow"
clippy.identity_op = "allow"
clippy.too_many_arguments = "allow"
clippy.approx_constant = "allow"
clippy.suboptimal_flops = "allow"

